--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^1.5.2",
     "react-datepicker": "^3.7.0",
     "react-dom": "^17.0.2",
+    "react-images-upload": "^1.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-yandex-maps": "^4.6.0",
